# truth-tester

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-all.yml  build-lib.yml  build-webview.yml
docs/: aliases.js  index.html  index.js  module.js  search-index.js  settings.html  source-files.js  styles.css  webview.d.ts  webview.js  webview_bg.d.ts  webview_bg.wasm
docs/arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html  struct.IntoIter.html
docs/bit_field/: index.html  trait.BitArray.html  trait.BitField.html
docs/crossbeam_deque/: enum.Pop.html  enum.Steal.html  struct.Stealer.html  struct.Worker.html
docs/crossbeam_epoch/: struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.LocalHandle.html  struct.Owned.html  struct.Shared.html
docs/crossbeam_queue/: struct.ArrayQueue.html  struct.PopError.html  struct.PushError.html  struct.SegQueue.html
docs/crossbeam_utils/: struct.Backoff.html  struct.CachePadded.html
docs/crossbeam_utils/atomic/: struct.AtomicCell.html
docs/crossbeam_utils/sync/: struct.Parker.html  struct.ShardedLock.html  struct.ShardedLockReadGuard.html  struct.ShardedLockWriteGuard.html  struct.Unparker.html  struct.WaitGroup.html
docs/crossbeam_utils/thread/: struct.Scope.html  struct.ScopedJoinHandle.html  struct.ScopedThreadBuilder.html
docs/either/: enum.Either.html
docs/libc/: struct.siginfo_t.html
docs/rayon/: struct.FnContext.html  struct.Scope.html  struct.ScopeFifo.html  struct.ThreadBuilder.html  struct.ThreadPool.html  struct.ThreadPoolBuildError.html  struct.ThreadPoolBuilder.html
docs/rayon/iter/: enum.Either.html  struct.Chain.html  struct.Chunks.html  struct.Cloned.html  struct.Empty.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.FlatMap.html  struct.Flatten.html  struct.Fold.html  struct.FoldWith.html  struct.Inspect.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.IterBridge.html  struct.Map.html  struct.MapInit.html  struct.MapWith.html  struct.MaxLen.html  struct.MinLen.html  struct.Once.html  struct.PanicFuse.html  struct.Repeat.html  struct.RepeatN.html  struct.Rev.html  struct.Skip.html  struct.Split.html  struct.Take.html  struct.TryFold.html  struct.TryFoldWith.html  struct.Update.html  struct.WhileSome.html  struct.Zip.html  struct.ZipEq.html
docs/rayon/option/: struct.IntoIter.html  struct.Iter.html  struct.IterMut.html
docs/rayon/range/: struct.Iter.html
docs/rayon/range_inclusive/: struct.Iter.html
docs/rayon/result/: struct.IntoIter.html  struct.Iter.html  struct.IterMut.html
docs/rayon/slice/: struct.Chunks.html  struct.ChunksMut.html  struct.Iter.html  struct.IterMut.html  struct.Split.html  struct.SplitMut.html  struct.Windows.html
docs/rayon/str/: struct.Bytes.html  struct.CharIndices.html  struct.Chars.html  struct.EncodeUtf16.html  struct.Lines.html  struct.MatchIndices.html  struct.Matches.html  struct.Split.html  struct.SplitTerminator.html  struct.SplitWhitespace.html
docs/rayon/vec/: struct.IntoIter.html
docs/rayon_core/: struct.Configuration.html  struct.FnContext.html  struct.Scope.html  struct.ScopeFifo.html  struct.ThreadBuilder.html  struct.ThreadPool.html  struct.ThreadPoolBuildError.html  struct.ThreadPoolBuilder.html
docs/scopeguard/: struct.ScopeGuard.html
docs/src/arrayvec/: array.rs.html  array_string.rs.html  char.rs.html  errors.rs.html  lib.rs.html  maybe_uninit_stable.rs.html  range.rs.html
docs/src/bit_field/: lib.rs.html
docs/src/cfg_if/: lib.rs.html
docs/src/crossbeam_deque/: lib.rs.html
docs/src/crossbeam_epoch/: atomic.rs.html  collector.rs.html  default.rs.html  deferred.rs.html  epoch.rs.html  guard.rs.html  (+2 more)
docs/truth-tester-webview/: Cargo.toml  build.bat  build.sh
docs/truth-tester-webview/src/: lib.rs  utils.rs
docs/truth_tester/: all.html  enum.Token.html  index.html  sidebar-items.js  struct.Lexer.html  struct.Parser.html  struct.State.html  struct.Tester.html  struct.TokenLiterals.html  traitalias.ExprFn.html  type.Tokens.html
src/: lib.rs  state.rs  tester.rs
src/eval/: expr.rs  mod.rs  state.rs
src/parsing/: lexer.rs  mod.rs  parser.rs  tokens.rs
src/state/: boolean.rs  mod.rs
src/tester/: expr.rs  mod.rs  parsing.md  state.rs
src/testers/: mod.rs
(+258 files in other folders)
