[package]
name = "truth-tester"
version = "0.1.0"
authors = ["Victor M. Suarez"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "A library for testing  all possible states of N variables."
keywords = ["no_std"]
repository = "https://github.com/svmnotn/truth-tester"

[features]
default = ["parallel"]
alloc = []
# Rayon isn't no_std, thus if parallelism
# is enabled, so is our ability to use
# allocation
parallel = ["rayon", "alloc"]

[dependencies]
bit_field = "0.10.0"
rayon = { version = "1.1.0", optional = true }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false