[package]
name = "truth-tester"
version = "0.1.0"
authors = ["Victor M. Suarez"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "A library for testing  all possible states of N variables."
keywords = ["no_std"]
repository = "https://github.com/svmnotn/truth-tester"

[features]
# By default we enable `parallel`,
# which requires `tester`, and
# `parsing`. Compiling this library
# with --no-default-features alone
# disables _everything_, so make
# sure to enable some features
default = ["parallel", "parsing"]
# Enables the `Tester` and `State` types
# so that you can use this library to
# test boolean expressions
tester = ["bit_field"]
# Enables the `parsing` module
# so that the library is capable
# of parsing boolean expression
# However, this requires allocation
parsing = []
# Rayon is _not_ no_std
parallel = ["rayon", "tester"]

[dependencies]
bit_field = { version = "0.10.0", optional = true }
rayon = { version = "1.1.0", optional = true }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false