[package]
name = "truth-tester"
version = "0.1.0"
authors = ["Victor M. Suarez"]
edition = "2018"
description = "A library for testing  all possible states of N variables."
repository = "https://github.com/svmnotn/truth-tester"
readme = "README.md"
keywords = ["no-std", "boolean-expression", "boolean-expression-parser", "boolean-expression-evaluator"]
categories = ["no-std", "parser-implementations"]
license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "svmnotn/truth-tester", branch = "master" }
is-it-maintained-issue-resolution = { repository = "svmnotn/truth-tester" }
is-it-maintained-open-issues = { repository = "svmnotn/truth-tester" }
maintenance = { status = "experimental" }
# Switch to the one below once ready to be published
# maintenance = { status = "actively-developed" }

[features]
# By default we enable `parallel`,
# which requires `tester`, and
# `parsing`. Compiling this library
# with --no-default-features alone
# disables _everything_, so make
# sure to enable some features
default = ["tester", "parsing"]
# Enables the `Tester`, `State` and
# `Expression` types so that you 
# can use this library to
# test boolean expressions
tester = ["bit_field"]
# Enables the `parsing` module
# so that the library is capable
# of parsing boolean expression
# However, this requires allocation
parsing = []
# Rayon is _not_ no_std compatible
parallel = ["rayon", "tester"]

[dependencies]
bit_field = { version = "0.10.0", optional = true }
rayon = { version = "1.2.0", optional = true }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false