[package]
name = "truth-tester-webview"
version = "0.1.0"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
truth-tester = { path = "../../", default-features = false, features = ["parsing", "tester"] }
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.27", features = ["Window", "Document", "Element", "Storage", "console"]}

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
